<resources>
    <string name="app_name">JankyBattleships</string>
    <string name="janky_battleships">Janky Battleships</string>
    <string name="join_game">Join Game</string>
    <string name="host_game">Host Game</string>
    <string name="top_10_players">Top 10 Players</string>
    <string name="english">English</string>
    <string name="options">Options</string>
    <string name="display_name">Display Name</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="log_out">Log Out</string>
    <string name="submit">Submit</string>
    <string name="room_code">Room Code:</string>
    <string name="waiting_for_opponent">Waiting for opponent…</string>
    <string name="enter_code">Enter Code:</string>
    <string name="_6_digit_code">6-digit Code</string>
    <string name="join">Join</string>
    <string name="invalid_room_code">Invalid room code, or the room doesn\'t exist!</string>
    <string name="generate_new_code">Generate New Code</string>
    <string name="used_room_code_warning">Warning! Current code is already used by another session.</string>
    <string name="valid_room_code">Game code is valid!</string>
    <string name="check_code_validity">Check Code Validity</string>
    <string name="start_game">Start Game</string>
    <string name="login">Login</string>
    <string name="patrol">Patrol Boat</string>
    <string name="destroyer">Destroyer</string>
    <string name="patrol_input">Enter Co-ordinates Here</string>
    <string name="coordinate_input">Enter Co-ordinates Here</string>
    <string name="cruiser_input">Enter Co-ordinates Here</string>
    <string name="confirm_place">Confirm</string>
    <string name="blank_button"> </string>
    <string name="swap">Swap</string>
    <string name="confirm_move">Confirm Attack</string>
    <string name="preview">Preview</string>
    <string name="p1_score">Player 1 Score</string>
    <string name="p2_score">Player 2 Score</string>
    <string name="place_your_ships">Place Your Ships!</string>
    <string name="logged_in">Logged In</string>
    <string name="grid_button">Grid Button</string>
    <string name="patrol_coords">(A,B), (C,D)</string>
    <string name="destroyer_coords">(A,B), (C,D), (E,F)</string>
    <string name="battleship_coords">(A,B), (C,D), (E,F), (G,H)</string>
    <string name="battleship">Battleship</string>
</resources>