<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSetupActivity"
    tools:layout_editor_absoluteX="7dp"
    tools:layout_editor_absoluteY="-42dp">

    <TextView
        android:id="@+id/textView_setup_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/waiting_for_opponent"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textView_setup_battleship"
        app:layout_constraintTop_toBottomOf="@+id/editText_setup_battleship" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView_setup"
        android:name="com.bcit.jankybattleships.fragments.GameFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_game" />

    <Button
        android:id="@+id/button_setup_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="6dp"
        android:text="@string/confirm_place"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_setup_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="6dp"
        android:text="@string/preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_setup_patrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:hint="@string/patrol_coords"
        android:importantForAutofill="no"
        android:inputType="number|text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView_setup_patrol"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView_setup" />

    <EditText
        android:id="@+id/editText_setup_destroyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/destroyer_coords"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editText_setup_patrol"
        app:layout_constraintTop_toBottomOf="@+id/editText_setup_patrol" />

    <TextView
        android:id="@+id/textView_setup_patrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/patrol"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_setup_patrol"
        app:layout_constraintStart_toStartOf="@+id/fragmentContainerView_setup" />

    <EditText
        android:id="@+id/editText_setup_battleship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:hint="@string/battleship_coords"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editText_setup_destroyer"
        app:layout_constraintTop_toBottomOf="@+id/editText_setup_destroyer" />

    <TextView
        android:id="@+id/textView_setup_battleship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/battleship"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_setup_battleship"
        app:layout_constraintEnd_toStartOf="@+id/editText_setup_battleship" />

    <TextView
        android:id="@+id/textView_setup_destroyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="1"
        android:text="@string/destroyer"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_setup_destroyer"
        app:layout_constraintEnd_toStartOf="@+id/editText_setup_destroyer" />

</androidx.constraintlayout.widget.ConstraintLayout>