<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HostGameActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-26dp">

    <TextView
        android:id="@+id/textView_host_roomcode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_host_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_host_generate"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="18dp"
        android:text="@string/generate_new_code"
        app:layout_constraintBottom_toTopOf="@+id/button_host_checkcode"
        app:layout_constraintStart_toStartOf="@+id/button_host_checkcode" />

    <TextView
        android:id="@+id/textView_host_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:textColor="#E57373"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_host_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_host_checkcode"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/check_code_validity"
        app:layout_constraintBottom_toTopOf="@+id/button_host_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_host_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="18dp"
        android:text="@string/start_game"
        app:layout_constraintBottom_toTopOf="@+id/textView_host_wait"
        app:layout_constraintEnd_toEndOf="@+id/button_host_checkcode" />

    <TextView
        android:id="@+id/textView_host_codelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="31dp"
        android:gravity="center"
        android:text="@string/room_code"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_host_roomcode"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_host_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="101dp"
        android:gravity="center"
        android:text="@string/waiting_for_opponent"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>