<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".JoinGameActivity">

<TextView
    android:id="@+id/textView_join_codelabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="34dp"
    android:gravity="center"
    android:text="@string/enter_code"
    android:textColor="@color/black"
    android:textSize="34sp"
    app:layout_constraintBottom_toTopOf="@+id/editText_join"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_join"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/_6_digit_code"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_join_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<Button
    android:id="@+id/button_join_submit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="21dp"
    android:text="@string/join"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView_join_error" />

<TextView
    android:id="@+id/textView_join_error"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="230dp"
    android:gravity="center"
    android:textColor="#E57373"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>